[gd_scene load_steps=5 format=3 uid="uid://bfuwqanoc3n16"]

[ext_resource type="Script" uid="uid://6vnpp55recl3" path="res://World/Basement/interactables/gun_bench.gd" id="1_po74k"]
[ext_resource type="Texture2D" uid="uid://bsamvou6k0n14" path="res://Assets/Textures/pistol_default_texture.jpg" id="2_mgvxs"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_po74k"]
albedo_color = Color(0.45, 0.28904998, 0.11699999, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_po74k"]
size = Vector3(1.99, 1.79, 1.55)

[node name="GunBench" type="Node3D"]
script = ExtResource("1_po74k")

[node name="Bench" type="CSGCombiner3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
use_collision = true
collision_layer = 512
collision_mask = 0

[node name="CSGBox3D" type="CSGBox3D" parent="Bench"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0.04999999)
size = Vector3(1, 0.5, 0.5)
material = SubResource("StandardMaterial3D_po74k")

[node name="CSGBox3D2" type="CSGBox3D" parent="Bench"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, -0.25)
size = Vector3(1, 0.8, 0.1)
material = SubResource("StandardMaterial3D_po74k")

[node name="Decoration" type="CSGCombiner3D" parent="Bench"]
transform = Transform3D(0.9787459, 0, -0.20507689, 0, 1, 0, 0.20507689, 0, 0.9787459, 0.07842283, 0, -0.084450185)

[node name="CSGBox3D3" type="CSGBox3D" parent="Bench/Decoration"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.18328416, 0.51628417, 0.0748469)
size = Vector3(0.17822266, 0.032568365, 0.04169922)

[node name="CSGBox3D4" type="CSGBox3D" parent="Bench/Decoration"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0076358765, 0.51628417, 0.0890803)
size = Vector3(0.17822266, 0.032568365, 0.070166014)

[node name="CSGBox3D5" type="CSGBox3D" parent="Bench/Decoration"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.008139268, 0.52132565, 0.09070994)
size = Vector3(0.11694336, 0.04265137, 0.03939209)

[node name="CSGBox3D6" type="CSGBox3D" parent="Bench/Decoration"]
transform = Transform3D(0.89769715, 0, 0.440613, 0, 1, 0, -0.440613, 0, 0.89769715, 0.084355325, 0.514212, 0.14336193)
size = Vector3(0.052612305, 0.028424073, 0.14469604)

[node name="InteractArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.80511546)
collision_layer = 65536

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8850172, 0.5505655)
shape = SubResource("BoxShape3D_po74k")

[node name="GunBenchMenu" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="GunBenchMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GunBenchMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBox_Main" type="VBoxContainer" parent="GunBenchMenu/MarginContainer"]
layout_mode = 2

[node name="HBox_Top" type="HBoxContainer" parent="GunBenchMenu/MarginContainer/VBox_Main"]
layout_mode = 2

[node name="Left_Panel" type="VBoxContainer" parent="GunBenchMenu/MarginContainer/VBox_Main/HBox_Top"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Background" type="TextureRect" parent="GunBenchMenu/MarginContainer/VBox_Main/HBox_Top/Left_Panel"]
custom_minimum_size = Vector2(640, 480)
layout_mode = 2
texture = ExtResource("2_mgvxs")
expand_mode = 3

[node name="Shading" type="Panel" parent="GunBenchMenu/MarginContainer/VBox_Main/HBox_Top/Left_Panel/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GunBenchMenu/MarginContainer/VBox_Main/HBox_Top/Left_Panel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 36

[node name="BarrelButton" type="Button" parent="GunBenchMenu/MarginContainer/VBox_Main/HBox_Top/Left_Panel/HBoxContainer"]
layout_mode = 2
text = "Barrel"

[node name="Frame" type="Button" parent="GunBenchMenu/MarginContainer/VBox_Main/HBox_Top/Left_Panel/HBoxContainer"]
layout_mode = 2
text = "Frame"

[node name="Magazine" type="Button" parent="GunBenchMenu/MarginContainer/VBox_Main/HBox_Top/Left_Panel/HBoxContainer"]
layout_mode = 2
text = "Magazine"

[node name="Chamber" type="Button" parent="GunBenchMenu/MarginContainer/VBox_Main/HBox_Top/Left_Panel/HBoxContainer"]
layout_mode = 2
text = "Chamber"

[node name="Optics" type="Button" parent="GunBenchMenu/MarginContainer/VBox_Main/HBox_Top/Left_Panel/HBoxContainer"]
layout_mode = 2
text = "Optics"

[node name="Right_Panel" type="Panel" parent="GunBenchMenu/MarginContainer/VBox_Main/HBox_Top"]
layout_mode = 2

[node name="Panel_Bottom" type="Panel" parent="GunBenchMenu/MarginContainer/VBox_Main"]
layout_mode = 2
size_flags_vertical = 3

[node name="Exit" type="Button" parent="GunBenchMenu"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -37.0
offset_bottom = 31.0
grow_horizontal = 0
size_flags_horizontal = 0
text = "X"
